@@ -2,28 +2,26 @@ iall:
 install:
 test:
 
-EXTRA_DIST = \
-test1    test108  test117  test127  test20   test27   test34   test46 \
-test10   test109  test118  test13   test200  test28   test36   test47 \
-test100  test11   test119  test14   test201  test29   test37   test5 \
-test101  test110  test12   test15   test202  test3    test4    test6 \
-test102  test111  test120  test16   test21   test30     test7 \
-test103  test112  test121  test17   test22   test300    test8 \
-test104  test113  test122  test18   test23   test301    test9 \
-test105  test114  test123  test19   test24   test302  test43   test31 \
-test106  test115  test124  test190  test25   test303  test44   test38 \
-test107  test116  test125  test2    test26   test33   test45   test126 \
-test304  test39   test32   test128  test48 test306 \
-test130  test131  test132  test133  test134 test135 test305 \
-test49 test50 test51 test52 test53 test54 test55 test56 \
-test500 test501 test502 test503 test504 test136 test57 test137 test138 \
-test58 test139 test140 test141 test59 test60 test61 test142 test143 \
-test62 test63 test64 test65 test66 test144 test145 test67 test68 test41 \
-test40 test42 test69 test70 test71 test72 test73 test146 test505 \
-test74 test75 test76 test77 test78 test147 test148 test506 test79 test80 \
-test81 test82 test83 test84 test85 test86 test87 test507 test149 test88 \
-test89 test90 test508 test91 test92 test203 test93 test94 test95 test509 \
-test510 test97 test98 test99 test150 test151 test152 test153
+EXTRA_DIST = test1 test108 test117 test127 test20 test27 test34 test46	\
+test10 test109 test118 test13 test200 test28 test36 test47 test100	\
+test11 test119 test14 test201 test29 test37 test5 test101 test110	\
+test12 test15 test202 test3 test4 test6 test102 test111 test120 test16	\
+test21 test30 test7 test103 test112 test121 test17 test22 test300	\
+test8 test104 test113 test122 test18 test23 test301 test9 test105	\
+test114 test123 test19 test24 test302 test43 test31 test106 test115	\
+test124 test190 test25 test303 test44 test38 test107 test116 test125	\
+test2 test26 test33 test45 test126 test304 test39 test32 test128	\
+test48 test306 test130 test131 test132 test133 test134 test135 test305	\
+test49 test50 test51 test52 test53 test54 test55 test56 test500		\
+test501 test502 test503 test504 test136 test57 test137 test138 test58	\
+test139 test140 test141 test59 test60 test61 test142 test143 test62	\
+test63 test64 test65 test66 test144 test145 test67 test68 test41	\
+test40 test42 test69 test70 test71 test72 test73 test146 test505	\
+test74 test75 test76 test77 test78 test147 test148 test506 test79	\
+test80 test81 test82 test83 test84 test85 test86 test87 test507		\
+test149 test88 test89 test90 test508 test91 test92 test203 test93	\
+test94 test95 test509 test510 test97 test98 test99 test150 test151	\
+test152 test153 test154 test155 test156 test157 test158
 
 # The following tests have been removed from the dist since they no longer
 # work. We need to fix the test suite's FTPS server first, then bring them
